# JAVATransformation

./: .gitignore  README.md  pyproject.toml
output/: report.json  report.md
output/fixed_project/afirma-core/: pom.xml
output/fixed_project/afirma-core-massive/: pom.xml
output/fixed_project/afirma-core-prefs/: pom.xml
output/fixed_project/afirma-crypto-batch-client/: pom.xml
output/fixed_project/afirma-crypto-cades/: pom.xml
output/fixed_project/afirma-crypto-cades-multi/: pom.xml
output/fixed_project/afirma-crypto-cadestri-client/: pom.xml
output/fixed_project/afirma-crypto-cipher/: pom.xml
output/fixed_project/afirma-crypto-cms/: pom.xml
output/fixed_project/afirma-crypto-cms-enveloper/: pom.xml
output/fixed_project/afirma-crypto-core-pkcs7/: pom.xml
output/fixed_project/afirma-crypto-core-pkcs7-tsp/: pom.xml
output/fixed_project/afirma-crypto-core-xml/: pom.xml
output/fixed_project/afirma-crypto-jarverifier/: pom.xml
output/fixed_project/afirma-crypto-odf/: pom.xml
output/fixed_project/afirma-crypto-ooxml/: pom.xml
output/fixed_project/afirma-crypto-padestri-client/: pom.xml
output/fixed_project/afirma-crypto-pdf/: pom.xml
output/fixed_project/afirma-crypto-pdf-common/: pom.xml
output/fixed_project/afirma-crypto-validation/: pom.xml
output/fixed_project/afirma-crypto-xades/: pom.xml
output/fixed_project/afirma-crypto-xadestri-client/: pom.xml
output/fixed_project/afirma-crypto-xmlsignature/: pom.xml
output/fixed_project/afirma-simple/: pom.xml
src/javamigrator/: .gitgnore  __init__.py  main.py  models.py  scanner.py
(+913 files in other folders)
